# LaborItecMircoNoah

./: CMakeLists.txt
src/: LaborAufgaben.c  automode.c  automode.h  da.c  da.h  db.c  db.h  filter.c  filter.h  game.c  game.h  interp.c  interp.h  itec.c  itec.h  lookup.c  lookup.h  main.c  serial.c  serial.h  util.c  util.h  utils.c  utils.h
